# QMLPlugin

./: CMakeLists.txt  README  README.md  app.qml  main.cpp
resources/qml/: qmldir
src/: CMakeLists.txt  company.qrc  qmldir  register.cpp  register.h  userregister_plugin.cpp  userregister_plugin.h
src/Company/Controls/: CompanyBaseButton.qml  qmldir
